# RoomBus

./: .gitignore  .gitmodules  LICENSE  README.md
documentation/: File Transfer Protocol.vsd  Microsoft Office Visio-Zeichnung (neu).vsd  System_calsses.vsd  architecture.vsd  connector.vsd  global.css  index.html  logo.vsd
pc/: raspbberyPi.txt
pc/BusCommander/: BusCommander.pro  main.cpp
pc/BusCommander/roomBus/: roomBus.cpp  roomBus.h
pc/BusCommander/unfoldedCircle/: driver.cpp  driver.h  remote.cpp  remote.h  server.cpp  server.h  unfoldedCircleRemote.cpp  unfoldedCircleRemote.h
pc/BusConfigurator/: busconfig.pro  config.pri  settings.xml
pc/BusConfigurator/busAccess/: busAccess.cpp  busAccess.h  busAccess.pro  busaccess_global.h  com.cpp  com.h  comSerial.cpp  comSerial.h  comTcp.cpp  comTcp.h  comUdp.cpp  comUdp.h  miniBusMessage.h  roomBusMessage.h
pc/BusConfigurator/busManager/: appPluginInterface.h  busConnectionWidget.cpp  busConnectionWidget.h  busConnectionWidget.ui  busDeviceWidget.cpp  busDeviceWidget.h  busDeviceWidget.ui  busDeviceWindow.cpp  busDeviceWindow.h  busDeviceWindow.ui  busManager.pro  echoTestWidget.cpp  echoTestWidget.h  echoTestWidget.ui  (+49 more)
uc/kernel/: .gitignore  CMakeLists.txt
uc/kernelUpdater/: kernelUpdater.hexmerger
uc/uCodebase/_test/: CMakeLists.txt  bus.c  bus.h  main.cpp  main.h  test.ini  test_bytearray.hpp  test_cobs.hpp  test_cobs_u8.hpp  test_edgeDetect.hpp  test_iniParser.h  test_memory.hpp  test_perlin.hpp  test_ringbufferU8.hpp  test_softCRC.hpp  test_string.hpp  test_tickTimer.hpp  test_valueReportProtocol.hpp
(+437 files in other folders)
